[gd_scene load_steps=51 format=3 uid="uid://135cro1dhcwm"]

[ext_resource type="Script" path="res://levelCustomize.gd" id="1_n5j6e"]
[ext_resource type="Texture2D" uid="uid://cj45b0imwu6o2" path="res://Levels/maps/gothic-castle-preview.png" id="2_nmtg6"]
[ext_resource type="Texture2D" uid="uid://v0cv6ckg1nwv" path="res://Vid/arrow.png" id="3_1636t"]
[ext_resource type="Texture2D" uid="uid://bnlf5d5ya5m37" path="res://Levels/characters/demon-idle.png" id="3_hskpv"]
[ext_resource type="Texture2D" uid="uid://do4hi5ow4laxr" path="res://Levels/characters/fire-skull.png" id="4_kutdr"]
[ext_resource type="Texture2D" uid="uid://qbe1n18ov2y6" path="res://Levels/characters/gothic-hero-idle.png" id="5_4h5ib"]
[ext_resource type="Texture2D" uid="uid://c6landk07kx8j" path="res://Levels/characters/Spritesheet.png" id="6_nevlr"]
[ext_resource type="Texture2D" uid="uid://dhqt7sq3ew1b3" path="res://Levels/characters/sunny-dragon-fly.png" id="7_sqmh6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rqema"]
atlas = ExtResource("3_hskpv")
region = Rect2(0, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_so7lg"]
atlas = ExtResource("3_hskpv")
region = Rect2(160, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsa3j"]
atlas = ExtResource("3_hskpv")
region = Rect2(320, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjsly"]
atlas = ExtResource("3_hskpv")
region = Rect2(480, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhck"]
atlas = ExtResource("3_hskpv")
region = Rect2(640, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3u4d"]
atlas = ExtResource("3_hskpv")
region = Rect2(800, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_07yao"]
atlas = ExtResource("4_kutdr")
region = Rect2(0, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_s01g6"]
atlas = ExtResource("4_kutdr")
region = Rect2(96, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_441ee"]
atlas = ExtResource("4_kutdr")
region = Rect2(192, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tinag"]
atlas = ExtResource("4_kutdr")
region = Rect2(288, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_168v4"]
atlas = ExtResource("4_kutdr")
region = Rect2(384, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7v00"]
atlas = ExtResource("4_kutdr")
region = Rect2(480, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3555a"]
atlas = ExtResource("4_kutdr")
region = Rect2(576, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb1uk"]
atlas = ExtResource("4_kutdr")
region = Rect2(672, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1q10"]
atlas = ExtResource("5_4h5ib")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_em4a3"]
atlas = ExtResource("5_4h5ib")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuvd7"]
atlas = ExtResource("5_4h5ib")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpwcs"]
atlas = ExtResource("5_4h5ib")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsu88"]
atlas = ExtResource("5_4h5ib")
region = Rect2(0, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmb5m"]
atlas = ExtResource("5_4h5ib")
region = Rect2(96, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0k6c"]
atlas = ExtResource("5_4h5ib")
region = Rect2(192, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vrqc"]
atlas = ExtResource("5_4h5ib")
region = Rect2(288, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g202g"]
atlas = ExtResource("5_4h5ib")
region = Rect2(0, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulicb"]
atlas = ExtResource("5_4h5ib")
region = Rect2(96, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_25jwg"]
atlas = ExtResource("5_4h5ib")
region = Rect2(192, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xmmw"]
atlas = ExtResource("5_4h5ib")
region = Rect2(288, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mlch"]
atlas = ExtResource("6_nevlr")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjfux"]
atlas = ExtResource("6_nevlr")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctsc3"]
atlas = ExtResource("6_nevlr")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdjx2"]
atlas = ExtResource("6_nevlr")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvxka"]
atlas = ExtResource("6_nevlr")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd2up"]
atlas = ExtResource("6_nevlr")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8kjr"]
atlas = ExtResource("7_sqmh6")
region = Rect2(0, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao5gk"]
atlas = ExtResource("7_sqmh6")
region = Rect2(192, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_hus5o"]
atlas = ExtResource("7_sqmh6")
region = Rect2(384, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbdmy"]
atlas = ExtResource("7_sqmh6")
region = Rect2(576, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7mf0"]
atlas = ExtResource("7_sqmh6")
region = Rect2(768, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aga0"]
atlas = ExtResource("7_sqmh6")
region = Rect2(960, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_47le5"]
atlas = ExtResource("7_sqmh6")
region = Rect2(1152, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgiby"]
atlas = ExtResource("7_sqmh6")
region = Rect2(1344, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps643"]
atlas = ExtResource("7_sqmh6")
region = Rect2(1536, 0, 192, 176)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8d70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqema")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so7lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsa3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjsly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3u4d")
}],
"loop": true,
"name": &"1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07yao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s01g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_441ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tinag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_168v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7v00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3555a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb1uk")
}],
"loop": true,
"name": &"2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1q10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em4a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuvd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpwcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsu88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmb5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0k6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vrqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g202g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulicb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25jwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xmmw")
}],
"loop": true,
"name": &"3",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mlch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjfux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctsc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdjx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvxka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd2up")
}],
"loop": true,
"name": &"4",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8kjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao5gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hus5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbdmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7mf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aga0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47le5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgiby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps643")
}],
"loop": true,
"name": &"5",
"speed": 8.0
}]

[node name="levelCustomize" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5j6e")
metadata/_edit_vertical_guides_ = [-109.0]

[node name="ConfrimButton" type="Button" parent="."]
layout_mode = 0
offset_left = 870.0
offset_top = 450.0
offset_right = 1066.0
offset_bottom = 652.0
text = "Confirm"

[node name="Save" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 657.0
offset_top = 105.0
offset_right = 840.0
offset_bottom = 138.0
placeholder_text = "Save as..."
alignment = 1

[node name="Rename" type="Label" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 66.0
offset_right = 779.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 30
text = "Rename:"
horizontal_alignment = 2

[node name="Mode" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 65.0
offset_right = 127.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 30
text = "Mode:"

[node name="Question" type="Label" parent="."]
layout_mode = 0
offset_left = 366.0
offset_top = 65.0
offset_right = 506.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 30
text = "Question:"

[node name="Question2" type="Label" parent="."]
layout_mode = 0
offset_left = 365.0
offset_top = 277.0
offset_right = 510.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 30
text = "Gameplay:"

[node name="LevelCustom" type="Label" parent="."]
layout_mode = 0
offset_left = 366.0
offset_top = 4.0
offset_right = 756.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 40
text = "Level customization"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 101.0
offset_right = 294.0
offset_bottom = 442.0

[node name="Single" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 22.0
offset_right = 38.0
offset_bottom = 46.0

[node name="Boss" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 64.0
offset_right = 65.0
offset_bottom = 88.0

[node name="Endless" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 106.0
offset_right = 65.0
offset_bottom = 130.0

[node name="Multi" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 185.0
offset_right = 41.0
offset_bottom = 209.0

[node name="PvP" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 44.0
offset_top = 230.0
offset_right = 68.0
offset_bottom = 254.0

[node name="Survival" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 44.0
offset_top = 272.0
offset_right = 68.0
offset_bottom = 296.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 45.0
offset_top = 17.0
offset_right = 208.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 28
text = "Singleplayer"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 70.0
offset_top = 59.0
offset_right = 233.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 28
text = "Boss fight"

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 70.0
offset_top = 101.0
offset_right = 244.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 28
text = "Endless fight"

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 46.0
offset_top = 180.0
offset_right = 220.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 28
text = "Multiplayer"

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 224.0
offset_right = 246.0
offset_bottom = 258.0
theme_override_font_sizes/font_size = 28
text = "PvP"

[node name="Label6" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 267.0
offset_right = 246.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 28
text = "Survival"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 101.0
offset_right = 609.0
offset_bottom = 278.0

[node name="DB" type="CheckBox" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.054
anchor_bottom = 0.167
offset_left = 13.0
offset_top = 22.0
offset_right = 23.77
offset_bottom = 13.268

[node name="DB2" type="CheckBox" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.054
anchor_bottom = 0.167
offset_left = 12.0
offset_top = 97.0
offset_right = 22.77
offset_bottom = 88.268

[node name="BelenSan" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 39.0
offset_top = 18.0
offset_right = 173.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 28
text = "Use 
database"

[node name="BelenSan2" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 38.0
offset_top = 93.0
offset_right = 237.0
offset_bottom = 170.0
theme_override_font_sizes/font_size = 28
text = "Custom 
question input"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 316.0
offset_right = 611.0
offset_bottom = 443.0

[node name="turnBased" type="CheckBox" parent="Panel3"]
layout_mode = 0
offset_left = 18.0
offset_top = 86.0
offset_right = 42.0
offset_bottom = 110.0

[node name="2dCombat" type="CheckBox" parent="Panel3"]
layout_mode = 0
offset_left = 19.0
offset_top = 27.0
offset_right = 43.0
offset_bottom = 51.0
button_pressed = true

[node name="TurnBased2" type="Label" parent="Panel3"]
layout_mode = 0
offset_left = 47.0
offset_top = 80.0
offset_right = 204.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 28
text = "Turn based:"

[node name="2dCombat2" type="Label" parent="Panel3"]
layout_mode = 0
offset_left = 47.0
offset_top = 22.0
offset_right = 189.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 28
text = "2D Combat"

[node name="Panel4" type="Panel" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 449.0
offset_right = 805.0
offset_bottom = 653.0

[node name="MapPreview" type="TextureRect" parent="Panel4"]
layout_mode = 0
offset_left = 39.0
offset_right = 403.0
offset_bottom = 199.0
texture = ExtResource("2_nmtg6")
expand_mode = 1

[node name="PreviousButton" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 2.0
offset_top = 86.0
offset_right = 42.0
offset_bottom = 126.0
icon = ExtResource("3_1636t")

[node name="PreviousButton2" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 493.0
offset_top = 83.5563
offset_right = 533.0
offset_bottom = 123.556
icon = ExtResource("3_1636t")

[node name="NextButton" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 441.0
offset_top = 122.0
offset_right = 481.0
offset_bottom = 162.0
rotation = 3.13815
icon = ExtResource("3_1636t")

[node name="NextButton2" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 753.0
offset_top = 119.556
offset_right = 793.0
offset_bottom = 159.556
rotation = 3.13703
icon = ExtResource("3_1636t")

[node name="CharacterPreview" type="AnimatedSprite2D" parent="Panel4"]
position = Vector2(626, 99.4446)
scale = Vector2(1, 1.15278)
sprite_frames = SubResource("SpriteFrames_p8d70")
animation = &"5"
autoplay = "5"
frame_progress = 0.148799

[node name="Panel5" type="Panel" parent="."]
layout_mode = 0
offset_left = 656.0
offset_top = 145.0
offset_right = 1067.0
offset_bottom = 439.0

[node name="Info" type="TextureRect" parent="Panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="info" type="Label" parent="Panel5"]
layout_mode = 0
offset_left = -1.0
offset_top = 229.0
offset_right = 411.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ConfrimButton" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Panel/Single" to="." method="_on_single_toggled"]
[connection signal="toggled" from="Panel/Boss" to="." method="_on_boss_toggled"]
[connection signal="toggled" from="Panel/Endless" to="." method="_on_endless_toggled"]
[connection signal="toggled" from="Panel/Multi" to="." method="_on_multi_toggled"]
[connection signal="toggled" from="Panel/PvP" to="." method="_on_pv_p_toggled"]
[connection signal="toggled" from="Panel/Survival" to="." method="_on_survival_toggled"]
[connection signal="pressed" from="Panel4/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="Panel4/PreviousButton2" to="." method="_on_previous_button_2_pressed"]
[connection signal="pressed" from="Panel4/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Panel4/NextButton2" to="." method="_on_next_button_2_pressed"]
